  this change the `HealthCheckConfig` schema has been restructured to more cleanly allow configuring
  varied health checkers. The following fields from `HealthCheckConfig` are now deprecated:
  `endpoint`, `expected_response`, `expected_response_code` in favor of setting them as part of an
  `HttpHealthChecker.`

0.10.0
------
- The Python build layout has changed:
  * The apache.thermos package has been removed.
  * The apache.gen.aurora package has been renamed to apache.aurora.thrift.
  * The apache.gen.thermos package has been renamed to apache.thermos.thrift.
  * A new apache.thermos.runner package has been introduced, providing the thermos_runner binary.
  * A new apache.aurora.kerberos package has been introduced, containing the Kerberos-supporting
    versions of aurora and aurora_admin (kaurora and kaurora_admin).
  * Most BUILD targets under src/main have been removed, see http://s.apache.org/b8z for details.
- Upgraded Mesos to 0.23.0. NOTE: Aurora executor now requires openssl runtime dependencies that
  were not previously enforced. You will need libcurl available on every Mesos slave (or Docker
  container) to successfully launch Aurora executor. See
  https://github.com/apache/mesos/blob/ebcf8cc2f2f6c236f6e9315447c247e6348141e1/docs/getting-started.md
  for more details on Mesos runtime dependencies.
- Resource quota is no longer consumed by production jobs with a dedicated constraint (AURORA-1457).
- Thrift ConfigGroup.instanceIds field has been deprecated. Use ConfigGroup.instances instead.
- Deprecated SessionValidator and CapabilityValidator interfaces have been removed. All
  SessionKey-typed arguments are now nullable and ignored by the scheduler Thrift API.
- Removed the `--root` option from the observer.

0.9.0
-----

- Now requires JRE 8 or greater.
- GC executor is fully replaced by the task state reconciliation (AURORA-1047).
- The scheduler command line argument 'enable_legacy_constraints' has been